Added testimonials section

--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
         <link rel="stylesheet" type="text/css" href="resources/css/style.css">
         <link href="https://unpkg.com/ionicons@4.2.1/dist/css/ionicons.min.css" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css?family=Lato:100,300,300i,400" rel="stylesheet">
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+        <script src="resources/js/function.js"></script>
         <title>Valerie Tech</title>
     </head>
     
@@ -166,15 +168,59 @@
                 <a class="btn btn-ghost btn-learn" href="#">Facilties and FAQ</a>                
             </div>
         </section>
+        <section class="section-testimonials">
+            <div class="row">
+                <h2>
+                    What our clients are saying
+                </h2>
+                <hr>
+            </div>
+            <div class="row testimonials">
+                <div class="col span-1-of-3">
+                    <blockquote id="testimonials1-1">
+                        I wanted a gaming PC, but my budget was very tight. They ensured I paid only for the components that will improve my gaming performance.
+                        <cite>Rohan Mehra</cite>
+                    </blockquote>
+                    <blockquote id="testimonials1-2">
+                        They kept me updated about the status of my PC throughout, giving me precisely an account of where my money was spent. Their transparency and pion is quite impressive.
+                        <cite>Anish Arora</cite>
+                    </blockquote>                    
+                </div>           
+                <div class="col span-1-of-3">
+                    <blockquote id="testimonials2-1">
+                        As a content creator, I didn’t know how each part would affect my day to day action. They helped me maximize my PC’s efficiency and minimize its cost.
+                        <cite>Aaryan Mathur</cite>
+                    </blockquote>
+                    <blockquote id="testimonials2-2">
+                        Much of my workflow was dependant on Final Cut Pro, but since I couldn't afford a new Mac, they provided me with the perfect solution.
+                        <cite>Kavya Thappar</cite>
+                    </blockquote>                    
+                </div>           
+                <div class="col span-1-of-3">
+                    <blockquote id="testimonials3-1">
+                        My laptop would take ages to start, and after giving it to the guys at Valerie Tech, the boot times are literally 10x faster.
+                        <cite>Aman Krishnan</cite>
+                    </blockquote>
+                    <blockquote id="testimonials3-2"> 
+                        They kept guiding me towards improvising my original model plan, and I ended up with a PC that is much better and much cheaper than what I had planned.
+                        <cite>Dev Khanna</cite>
+                    </blockquote>                    
+                </div>
+            </div>
+        </section>
+        <section class=""
     </body>
 </html>
 
 
 <!--
-Facilities:
-1. Plug and Play: Every software you need is installed, activated and tested before delivery. Our battle-stations come preloaded with all the games you need.[color wand/globe]
-3. Service: We do not stop at delivery. This is what sets us apart. If you have an issue, we get in touch immediately and if need be, our technician will be at your doorstep immediately. 
-2. Others: We deliver the most and the best. Get the most bang for your buck with a safe and reliable overclock. Experience the best aesthetic with some dope AF RGB lighting. [speedometer]
-4. Upgrade: Want snappy speeds without changing your entire set-up? We upgrade PCs and laptops to the latest hardware to ensure better performance without replacing the whole system. [Trending up]
+[4:00 PM, 6/27/2018] Deepakshi TSEC: Rohan Mehra
+[4:01 PM, 6/27/2018] Deepakshi TSEC: 
+[4:01 PM, 6/27/2018] Deepakshi TSEC: Aaryan Mathur
+[4:01 PM, 6/27/2018] Deepakshi TSEC: Aman Krishnan
+[4:02 PM, 6/27/2018] Deepakshi TSEC: Dev Khanna
+[4:03 PM, 6/27/2018] Deepakshi TSEC: Kavya Thappar
+
+
 
 -->
