Added blank contact section

--- a/index.html
+++ b/index.html
@@ -208,7 +208,9 @@
                 </div>
             </div>
         </section>
-        <section class=""
+        <section class="section-contact">
+            
+        </section>
     </body>
 </html>
 
