--- a/index.html
+++ b/index.html
@@ -262,9 +262,48 @@
                     </div>
                 </form>
             </div>
-            
-            
         </section>
+        <footer>
+            <div class="row">
+                <div class="col span-1-of-2">
+                    <ul class="footer-nav">
+                        <li>
+                            <a href="#">Home</a>
+                        </li>
+                        <li>
+                            <a href="#">Facilities</a>
+                        </li>
+                        <li>
+                            <a href="#">Build a PC</a>
+                        </li>
+                        <li>
+                            <a href="#">Contact Us</a>
+                        </li>
+                    </ul>
+                </div>
+                <div class="col span-1-of-2">
+                    <ul class="social-icons">
+                        <li>
+                            <a href="#"><i class="icon ion-logo-facebook"></i></a>
+                        </li>
+                        <li>
+                            <a href="#"><i class="icon ion-logo-twitter"></i></a>
+                        </li>
+                        <li>
+                            <a href="#"><i class="icon ion-logo-googleplus"></i></a>
+                        </li>
+                        <li>
+                            <a href="#"><i class="icon ion-logo-instagram"></i></a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+            <div class="row">
+                <p>
+                    Designed and created by the Valerie Tech team.
+                </p>
+            </div>
+        </footer>
     </body>
 </html>
 
