--- a/index.html
+++ b/index.html
@@ -111,7 +111,51 @@
             </div>
         </section>
  
-        <section class="section-banners">
+        <section class="section-grid">
+            <ul class="showcase">
+                <li>
+                    <figure class="showcase-photo">
+                        <img src="resources/img/grid-1.jpg" alt="showcase-1">
+                    </figure>
+                </li>
+                <li>
+                    <figure class="showcase-photo">
+                        <img src="resources/img/grid-2.jpg" alt="showcase-2">
+                    </figure>
+                </li>
+                <li>
+                    <figure class="showcase-photo">
+                        <img src="resources/img/grid-3.jpg" alt="showcase-3">
+                    </figure>
+                </li>
+                <li>
+                    <figure class="showcase-photo">
+                        <img src="resources/img/grid-4.jpg" alt="showcase-4">
+                    </figure>
+                </li>
+            </ul>
+            <ul class="showcase">
+                <li>
+                    <figure class="showcase-photo">
+                        <img src="resources/img/grid-5.jpg" alt="showcase-5">
+                    </figure>
+                </li>
+                <li>
+                    <figure class="showcase-photo">
+                        <img src="resources/img/grid-6.jpg" alt="showcase-6">
+                    </figure>
+                </li>
+                <li>
+                    <figure class="showcase-photo">
+                        <img src="resources/img/grid-7.jpg" alt="showcase-7">
+                    </figure> 
+                </li>
+                <li>
+                    <figure class="showcase-photo">
+                        <img src="resources/img/grid-8.jpg" alt="showcase-8">
+                    </figure>
+                </li>
+            </ul>
         </section>
         <section class="section-facilities">
             <div class="row">
