Fixed images in grid & 1typo

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <title>Valerie Tech</title>
     </head>
     
-    <body>
+     <body>
         <header>
             <nav>
                 <div class="row">
@@ -53,7 +53,7 @@
                             Don't just build to own.<br>Build to Brag.
                         </h1>
                         <h1 class="hero-text fade">
-                            Strict budget but want to pwn some noobs?<br>We’ve got you covered
+                            Tight budget but want to pwn some noobs?<br>We’ve got you covered.
                         </h1>
                         <h1 class="hero-text fade">
                             Customize. Personalize. Maximize.<br>A build to suit all your needs.
@@ -62,7 +62,7 @@
                             Want a Mac but love your kidney?<br>We might have the solution for you!
                         </h1>
                         <h1 class="hero-text fade">
-                            For an elite experience at your workplace.<br>Increase performance and reliability at a lower price.
+                            An elite experience at your workplace.<br>Better performance at a lower price.
                         </h1>
                         <h1 class="hero-text fade">
                             Spend less time configuring,<br>more time mining.
@@ -227,7 +227,7 @@
                         <cite>Rohan Mehra</cite>
                     </blockquote>
                     <blockquote id="testimonials1-2">
-                        They kept me updated about the status of my PC throughout, giving me precisely an account of where my money was spent. Their transparency and pion is quite impressive.
+                        They kept me updated about the status of my PC throughout, giving me precisely an account of where my money was spent. Their transparency and communication is quite impressive.
                         <cite>Anish Arora</cite>
                     </blockquote>                    
                 </div>           
@@ -259,7 +259,7 @@
                     We're happy to hear from you
                 </h2>
                 <h3>
-                    Just shoot us a message &mdash; You won't be disappointed. We promise.
+                    Just shoot us a message &mdash; You won't be disappointed. We promise!
                 </h3>
                 <hr>
             </div>
