--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
         <link rel="stylesheet" type="text/css" href="vendors/css/normalize.css">
         <link rel="stylesheet" type="text/css" href="resources/css/style.css">
         <link rel="stylesheet" type="text/css" href="vendors/css/grid.css">
+        <link rel="stylesheet" type="text/css" href="vendors/css/animate.css">
         <link rel="stylesheet" type="text/css" href="resources/css/style.css">
         <link rel="stylesheet" type="text/css" href="resources/css/queries.css">
         <link href="https://unpkg.com/ionicons@4.2.1/dist/css/ionicons.min.css" rel="stylesheet">
@@ -19,21 +20,22 @@
             <nav>
                 <div class="row">
                     <img src="resources/img/logo-white.png" alt="Logo" class="logo">
-                    <ul class="main-nav">
+                    <img src="resources/img/logo.png" alt="Logo" class="logo-black">
+                    <ul class="main-nav js--main-nav">
                         <li>
-                            <a href="#">Why us?</a>
+                            <a href="#why-us">Why us?</a>
                         </li>
                         <li>
-                            <a href="#">Facilities</a>
+                            <a href="#facilities">Facilities</a>
                         </li>
                         <li>
-                            <a href="#">Testimonials</a>
+                            <a href="#testimonials">Testimonials</a>
                         </li>
                         <li>
-                            <a href="#">Contact us</a>
+                            <a href="#contact">Contact us</a>
                         </li>
-
                     </ul>
+                    <a class="mobile-nav-icon js--nav-icon"><i class="icon ion-ios-menu"></i></a>
                 </div>
             </nav>
             <div class="banner-container">
@@ -70,8 +72,8 @@
                         <h1 class="hero-text fade">
                             Spend less time configuring,<br>more time mining.
                         </h1>
-                        <a class="btn btn-full hero" href="#">Build me a PC!</a>
-                        <a class="btn btn-ghost hero" href="#">Show me more</a>
+                        <a class="btn btn-full hero js--scroll-to-contact" href="#">Build me a PC!</a>
+                        <a class="btn btn-ghost hero js--scroll-to-facilities" href="#">Show me more</a>
                 </div>
                 
                 <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
@@ -87,7 +89,7 @@
                 <span class="dot" onclick="currentSlide(6)"></span> 
             </div>
         </header>
-        <section class="section section-mission">
+        <section class="section section-mission js--section-mission">
             <div class="row">
                 <div class="mission">
                     <h3>
@@ -96,7 +98,7 @@
                 </div>
             </div>
         </section>
-        <section class="section-why-us">
+        <section class="section-why-us" id="why-us">
             <div class="row">
                 <h2>
                     Why us?
@@ -160,7 +162,7 @@
                 </li>
             </ul>
         </section>
-        <section class="section section-facilities">
+        <section class="section section-facilities js--section-facilities" id="facilities">
             <div class="row">
                 <h2>
                     What we're offering
@@ -168,7 +170,7 @@
                 <hr>
             </div>
             
-            <div class="row">
+            <div class="row js--wp-1">
                 <div class="col span-1-of-4 box">
                     <i class="icon ion-ios-globe icon-big"></i>
                     <h3>
@@ -216,7 +218,7 @@
                 <a class="btn btn-ghost btn-learn" href="#">Facilties and FAQ</a>                
             </div>
         </section>
-        <section class="section section-testimonials">
+        <section class="section section-testimonials"  id="testimonials">
             <div class="row">
                 <h2>
                     What our clients are saying
@@ -256,7 +258,7 @@
                 </div>
             </div>
         </section>
-        <section class="section section-contact">
+        <section class="section section-contact js--section-contact" id="contact">
             <div class="row">
                 <h2>
                     We're happy to hear from you
@@ -351,6 +353,7 @@
             </div>
         </footer>
     </body>
+    <script src="vendors/js/jquery.waypoints.min.js"></script>
     <script src="resources/js/function.js"></script>
 </html>
 
