--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
         <section class="section section-facilities js--section-facilities" id="facilities">
             <div class="row">
                 <h2>
-                    What we're offering
+                    What we offer
                 </h2>
                 <hr>
             </div>
