Added animations to Facilities page

--- a/facilities.html
+++ b/facilities.html
@@ -124,7 +124,7 @@
                 </div>
             </div>
         </section>
-        <section class="section-faq">
+        <section class="section-faq js--wp-2" id="faq">
             <div class="row">
                 <h2>
                     Have a question?
