--- a/ProgressBar/progressBar.html
+++ b/ProgressBar/progressBar.html
@@ -13,7 +13,7 @@
 <div class="container">
   <h2>Progress Bar With Label</h2>
   <div class="progress">
-    <div class="progress-bar" role="progressbar" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100" style="width:25%">
+    <div class="progress-bar" role="progressbar" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100" style="width:25%">
 	25%
     </div>
   </div>
@@ -37,7 +37,7 @@
 					<fieldset class="ui-corner-all">
 						<select class="priority1">
 							<option value="--">Priority 1</option>
-							<option value="corporateSoftware" id="Cs">Corporate Software</option>
+							<option value="corporateSoftware">Corporate Software</option>
 							<option value="gaming">Gaming</option>
 							<option value="generalSurfing">General Surfing</option>
 							<option value="photo">Photo Editing</option>
@@ -61,7 +61,7 @@
 							<option value="video">Video Editing</option>
 							<option value="none">None</option>
 						</select>
-						<label>Anything Specific?</label><textarea rows="3" cols="25" id="otherPriority"></textarea>
+						<label>Anything Specific?</label><textarea rows="3" cols="25" id="otherPriority" disabled></textarea>
 						
 						<!-- <label>Email:</label><input type="text">
 						<label>Telephone:</label><input type="text">
@@ -131,12 +131,11 @@
 							<option value="battlefield">Battlefield 2</option>
 							<option value="none">None</option>
 						</select>
-						<label>Other Game:</label><input type="text" id="otherGame" class="otherGame">
+						<label>Other Game:</label><input type="text" id="otherGame" class="otherGame" disabled>
 						<select class="softwares1">
 							<option value="--"></option>
 							<option value="wind10">Windows 10</option>
 							<option value="wind7">Windoes 7: Ultimate</option>
-							<option value="gta">GTA 5</option>
 							<option value="mac">Mac OS</option>
 							<option value="ubuntu">Ubuntu</option>
 							<option value="micro">Microsoft Office</option>
@@ -148,7 +147,6 @@
 							<option value="--"></option>
 							<option value="wind10">Windows 10</option>
 							<option value="wind7">Windoes 7: Ultimate</option>
-							<option value="gta">GTA 5</option>
 							<option value="mac">Mac OS</option>
 							<option value="ubuntu">Ubuntu</option>
 							<option value="micro">Microsoft Office</option>
@@ -160,8 +158,7 @@
 						<select class="softwares3">
 							<option value="--"></option>
 							<option value="wind10">Windows 10</option>
-							<option value="wind7">Windoes 7: Ultimate</option>
-							<option value="gta">GTA 5</option>
+							<option value="wind7">Windoes 7: Ultimate</option>	
 							<option value="mac">Mac OS</option>
 							<option value="ubuntu">Ubuntu</option>
 							<option value="micro">Microsoft Office</option>
@@ -170,7 +167,7 @@
 							<option value="adobePremirePro">Adobe Premire Pro</option>
 							<option value="none">None</option>
 						</select>
-						<label>Other Software:</label><input type="text" id="otherSoftware">
+						<label>Other Software:</label><input type="text" id="otherSoftware" disabled>
 						
 						<!-- <label>Email:</label><input type="text">
 						<label>Telephone:</label><input type="text">
