new-progressbar-alerts-error

--- a/jQuery UI/regForm.html
+++ b/jQuery UI/regForm.html
@@ -18,7 +18,7 @@
 				  <h2>Personal Details</h2>
 					<fieldset class="ui-corner-all">
 						<label>Name:</label><input type="text" id="name">
-						<label>Email:</label><input type="text" id="email">
+						<label>Email:</label><input type="email" id="email">
 						<!-- <label>Budget:</label><input type="range" name="budget" min="20000" max="100000"> -->
 						<label>Min:</label><input type="Number" id="min">
 						<label>Max:</label><input type="Number" id="max">
