--- a/ProgressBar/progressBar.html
+++ b/ProgressBar/progressBar.html
@@ -23,8 +23,8 @@
 				<div id="panel1" class="p1">
 				  <h2>Personal Details</h2>
 					<fieldset class="ui-corner-all">
-						<label>Name:</label><input type="text" id="name">
-						<label>Email:</label><input type="text" id="email">
+						<label>Name:</label><input type="text" id="name" required>
+						<label>Email:</label><input type="email" id="email" placeholder="Your Email" required>
 						<!-- <label>Budget:</label><input type="range" name="budget" min="20000" max="100000"> -->
 						<label>Min:</label><input type="Number" id="min">
 						<label>Max:</label><input type="Number" id="max">
@@ -36,7 +36,7 @@
 				  <h2>Primary Usage</h2>
 					<fieldset class="ui-corner-all">
 						<select class="priority1">
-							<option value="--">Priority 1</option>
+							<option value="--" disabled>Priority 1</option>
 							<option value="corporateSoftware">Corporate Software</option>
 							<option value="gaming">Gaming</option>
 							<option value="generalSurfing">General Surfing</option>
@@ -44,22 +44,22 @@
 							<option value="video">Video Editing</option>
 						</select>
 						<select class="priority2">
-							<option value="--">Priority 2</option>
+							<option value="--" disabled>Priority 2</option>
 							<option value="corporateSoftware">Corporate Software</option>
 							<option value="gaming">Gaming</option>
 							<option value="generalSurfing">General Surfing</option>
 							<option value="photo">Photo Editing</option>
 							<option value="video">Video Editing</option>
-							<option value="none">None</option>
+							<option value="other">Other</option>
 						</select>
 						<select class="priority3">
-							<option value="--">Priority 3</option>
+							<option value="--" disabled>Priority 3</option>
 							<option value="corporateSoftware">Corporate Software</option>
 							<option value="gaming">Gaming</option>
 							<option value="generalSurfing">General Surfing</option>
 							<option value="photo">Photo Editing</option>
 							<option value="video">Video Editing</option>
-							<option value="none">None</option>
+							<option value="other">Other</option>
 						</select>
 						<label>Anything Specific?</label><textarea rows="3" cols="25" id="otherPriority" disabled></textarea>
 						
@@ -109,7 +109,7 @@
 							<option value="DOTA 2">DOTA 2</option>
 							<option value="lol">League of Legends</option>
 							<option value="battlefield">Battlefield 2</option>
-							<option value="none">None</option>
+							<option value="other">Other</option>
 						</select>
 						<select class="games3">
 							<option value="singlePlayer" disabled>Single Player</option>
@@ -129,7 +129,7 @@
 							<option value="DOTA 2">DOTA 2</option>
 							<option value="lol">League of Legends</option>
 							<option value="battlefield">Battlefield 2</option>
-							<option value="none">None</option>
+							<option value="other">Other</option>
 						</select>
 						<label>Other Game:</label><input type="text" id="otherGame" class="otherGame" disabled>
 						<select class="softwares1">
@@ -153,7 +153,7 @@
 							<option value="photoshop">Adobe Photoshop</option>
 							<option value="illustrator">Adobe Illustrator</option>
 							<option value="adobePremirePro">Adobe Premire Pro</option>
-							<option value="none">None</option>
+							<option value="other">Other</option>
 						</select>
 						<select class="softwares3">
 							<option value="--"></option>
@@ -165,7 +165,7 @@
 							<option value="photoshop">Adobe Photoshop</option>
 							<option value="illustrator">Adobe Illustrator</option>
 							<option value="adobePremirePro">Adobe Premire Pro</option>
-							<option value="none">None</option>
+							<option value="other">Other</option>
 						</select>
 						<label>Other Software:</label><input type="text" id="otherSoftware" disabled>
 						
@@ -182,6 +182,6 @@
 				</div>
 				<button id="next">Next &gt;</button><button id="back" disabled="disabled">&lt; Back</button>
 			</form>
-			<script type="text/javascript" src="app.js"></script>
+		<script type="text/javascript" src="app.js"></script>
 </body>
 </html>
