Facilities page done-Responsiveness left-fixed footer

--- a/facilities.html
+++ b/facilities.html
@@ -390,7 +390,7 @@
             </div>
             <div class="row">
                 <p>
-                    Designed and created by the Valerie Tech team.
+                    team@valerietech.in<br>+91-(982)099-0356<br>Designed and created by the Valerie Tech team
                 </p>
             </div>
         </footer>
