--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                         <h1 class="hero-text fade">
                             Spend less time configuring,<br>more time mining.
                         </h1>
-                        <a class="btn btn-full hero js--scroll-to-contact" href="#">Build me a PC!</a>
+                        <a class="btn btn-full hero" href="form.html">Build me a PC!</a>
                         <a class="btn btn-ghost hero js--scroll-to-facilities" href="#">Show me more</a>
                 </div>
                 
@@ -215,7 +215,7 @@
                 </div>
             </div>
             <div class="row learn-row">
-                <a class="btn btn-ghost btn-learn" href="#">Facilties and FAQ</a>                
+                <a class="btn btn-ghost btn-learn" href="facilities.html">Facilties and FAQ</a>                
             </div>
         </section>
         <section class="section section-testimonials"  id="testimonials">
@@ -348,7 +348,7 @@
             </div>
             <div class="row">
                 <p>
-                    Designed and created by the Valerie Tech team.
+                    team@valerietech.in<br>+91-(982)099-0356<br>Designed and created by the Valerie Tech team
                 </p>
             </div>
         </footer>
@@ -357,16 +357,3 @@
     <script src="resources/js/function.js"></script>
 </html>
 
-
-<!--
-
-6. Gamers: Strict budget but want to pwn some noobs?
-We’ve got you covered
-2. Content Creator: Customize. Personalize. Maximize. A build to suit all your needs. 
-5. Hackintosh: Want a Mac but love your kidney? We might have the solution for you!
-3. Corporate: For an elite experience at your workplace. Increase performance and reliability at a lower price.
-4. Miners: Spend less time configuring, more time mining.
-
-
-
--->
