Fixed next button

--- a/ProgressBar/progressBar.html
+++ b/ProgressBar/progressBar.html
@@ -30,6 +30,7 @@
 						<label>Max:</label><input type="Number" id="max">
 						<!-- <label>Choose password:</label><input type="password">
 						<label>Confirm password:</label><input type="password"> -->
+                        <input type="submit" value="Send it!">
 					</fieldset>
 				</div>
 				<div id="panel2" class="p2">
