--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
         <title>Valerie Tech</title>
     </head>
-     valeriet<body>
+     <body>
         <header>
             <nav>
                 <div class="row">
