--- a/ProgressBar/progressBar.html
+++ b/ProgressBar/progressBar.html
@@ -19,23 +19,20 @@
   </div>
 </div>
 
-			<form action="serverScript.php">
+			<form id="addEvent-form" action="serverScript.php">
 				<div id="panel1" class="p1">
 				  <h2>Personal Details</h2>
 					<fieldset class="ui-corner-all">
-						<label>Name:</label><input type="text" id="name" required>
+						<label>Name:</label><input type="text" id="name" required>	
 						<label>Email:</label><input type="email" id="email" placeholder="Your Email" required>
-						<!-- <label>Budget:</label><input type="range" name="budget" min="20000" max="100000"> -->
 						<label>Min:</label><input type="Number" id="min">
 						<label>Max:</label><input type="Number" id="max">
-						<!-- <label>Choose password:</label><input type="password">
-						<label>Confirm password:</label><input type="password"> -->
 					</fieldset>
 				</div>
 				<div id="panel2" class="p2">
 				  <h2>Primary Usage</h2>
 					<fieldset class="ui-corner-all">
-						<select class="priority1">
+						<select class="priority1" required>
 							<option value="--" disabled>Priority 1</option>
 							<option value="corporateSoftware">Corporate Software</option>
 							<option value="gaming">Gaming</option>
@@ -168,10 +165,6 @@
 							<option value="other">Other</option>
 						</select>
 						<label>Other Software:</label><input type="text" id="otherSoftware" disabled>
-						
-						<!-- <label>Email:</label><input type="text">
-						<label>Telephone:</label><input type="text">
-						<label>Address:</label><textarea rows="3" cols="25"></textarea> -->
 					</fieldset>
 				</div>
 				<div id="thanks" class="p4">
@@ -180,7 +173,8 @@
   					<p>We shall contact you soon with our recommended build</p>
 					</fieldset>
 				</div>
-				<button id="next">Next &gt;</button><button id="back" disabled="disabled">&lt; Back</button>
+				<input type="submit" id="next" value="Next >"><input type="submit" id="back" disabled="disabled" value="< Back">
+				<!-- <button type="submit" id="next">Next &gt;</button><button id="back" disabled="disabled">&lt; Back</button> -->
 			</form>
 		<script type="text/javascript" src="app.js"></script>
 </body>
