forms not on the same page

--- a/ProgressBar/progressBar.html
+++ b/ProgressBar/progressBar.html
@@ -23,14 +23,13 @@
 				<div id="panel1" class="p1">
 				  <h2>Personal Details</h2>
 					<fieldset class="ui-corner-all">
-						<label>Name:</label><input type="text" id="name" required>	
-						<label>Email:</label><input type="email" id="email" placeholder="Your Email" required>
+						<label>Name:</label><input type="text" id="name">	
+						<label>Email:</label><input type="email" id="email" placeholder="Your Email">
 						<label>Min:</label><input type="Number" id="min">
 						<label>Max:</label><input type="Number" id="max">
 
 						<!-- <label>Choose password:</label><input type="password">
 						<label>Confirm password:</label><input type="password"> -->
-                        <input type="submit" value="Send it!">
 
 					</fieldset>
 				</div>
