Minor design fixes

--- a/facilities.html
+++ b/facilities.html
@@ -21,6 +21,9 @@
                     <img src="../resources/img/logo-white.png" alt="Logo" class="logo">
                     <ul class="main-nav js--main-nav">
                         <li>
+                            <a href="index.html">Home</a>
+                        </li>
+                        <li>
                             <a href="#facilities">Facilities</a>
                         </li>
                         <li>
