Buttons working w/ validation- Event listeners pending

--- a/ProgressBar/progressBar.html
+++ b/ProgressBar/progressBar.html
@@ -20,13 +20,12 @@
 </div>
 
 			<form class="main-form">
-						<input type="text" id="name" required>	
-						<input type="email" id="email" placeholder="Your Email" required>
+						<input type="text" id="name" placeholder="Your name">	
+						<input type="email" id="email" placeholder="Your email" >
 						<input type="number" id="min">
 						<input type="number" id="max">
-				        <input type="submit" value="Next">
-                        <input type="submit" value="Submit">
-                
+				        <input type="submit" value="Next" id="next">              
+				        <input type="submit" value="Back" id="back">              
             </form>
     <form id="addEvent-form" action="serverScript.php">
 				<div id="panel1" class="p1">
