exclusive-clean-code

--- a/ProgressBar/progressBar.html
+++ b/ProgressBar/progressBar.html
@@ -27,8 +27,7 @@
     </div>  
     <div id="panel2" class="p2">
         <h2>Primary Usage</h2>
-            <select class="priority1" required>
-                <option value="--" disabled>Priority 1</option>
+            <select class="priority1">
                 <option value="corporateSoftware">Corporate Software</option>
                 <option value="gaming">Gaming</option>
                 <option value="generalSurfing">General Surfing</option>
@@ -36,7 +35,6 @@
                 <option value="video">Video Editing</option>
             </select>
             <select class="priority2">
-                <option value="--" disabled>Priority 2</option>
                 <option value="corporateSoftware">Corporate Software</option>
                 <option value="gaming">Gaming</option>
                 <option value="generalSurfing">General Surfing</option>
@@ -45,7 +43,6 @@
                 <option value="other">Other</option>
             </select>
             <select class="priority3">
-                <option value="--" disabled>Priority 3</option>
                 <option value="corporateSoftware">Corporate Software</option>
                 <option value="gaming">Gaming</option>
                 <option value="generalSurfing">General Surfing</option>
@@ -118,10 +115,9 @@
         <label name="gameLabel">Other Game:</label>
         <input type="text" id="otherGame" class="otherGame">
         <select class="softwares1">
-            <option value="--"></option>
-            <option value="wind10">Windows 10</option>
-            <option value="wind7">Windoes 7: Ultimate</option>
             <option value="mac">Mac OS</option>
+			<option value="wind10" id="win10-1">Windows 10</option>
+            <option value="wind7" id="win7-1">Windoes 7: Ultimate</option>
             <option value="ubuntu">Ubuntu</option>
             <option value="micro">Microsoft Office</option>
             <option value="photoshop">Adobe Photoshop</option>
@@ -129,10 +125,9 @@
             <option value="adobePremirePro">Adobe Premire Pro</option>
         </select>
         <select class="softwares2">
-            <option value="--"></option>
-            <option value="wind10">Windows 10</option>
-            <option value="wind7">Windoes 7: Ultimate</option>
             <option value="mac">Mac OS</option>
+			<option value="wind10" id="win10-2">Windows 10</option>
+            <option value="wind7" id="win7-2">Windoes 7: Ultimate</option>
             <option value="ubuntu">Ubuntu</option>
             <option value="micro">Microsoft Office</option>
             <option value="photoshop">Adobe Photoshop</option>
@@ -141,10 +136,9 @@
             <option value="other">Other</option>
         </select>
         <select class="softwares3">
-            <option value="--"></option>
-            <option value="wind10">Windows 10</option>
-            <option value="wind7">Windoes 7: Ultimate</option>	
             <option value="mac">Mac OS</option>
+			<option value="wind10" id="win10-3">Windows 10</option>
+            <option value="wind7" id="win7-3">Windoes 7: Ultimate</option>
             <option value="ubuntu">Ubuntu</option>
             <option value="micro">Microsoft Office</option>
             <option value="photoshop">Adobe Photoshop</option>
