--- a/form.html
+++ b/form.html
@@ -11,6 +11,7 @@
         <link rel="stylesheet" type="text/css" href="resources/css/queries.css">
         <link href="https://unpkg.com/ionicons@4.2.1/dist/css/ionicons.min.css" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css?family=Lato:100,300,300i,400" rel="stylesheet">
+		<link rel="stylesheet" type="text/css" href="style.css">
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
 		<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
@@ -347,10 +348,33 @@
               </div>
             </div>  -->
 			
-			<div class="w3-container">
+			<!-- <div class="w3-container">
 				<div class="w3-round-xlarge">
 					<div class="w3-container w3-blue w3-round-xlarge w3-center" id="myBar" style="width:25%">25%</div>
 				</div>
+			</div> -->
+			
+			<div class="container">
+
+				<input type="radio" class="radio" name="progress" value="twentyfive" id="twentyfive" checked>
+				<label for="twentyfive" class="label">25%</label>
+
+				<input type="radio" class="radio" name="progress" value="fifty" id="fifty">
+				<label for="fifty" class="label">50%</label>
+
+				<input type="radio" class="radio" name="progress" value="seventyfive" id="seventyfive">
+				<label for="seventyfive" class="label">75%</label>
+
+				<input type="radio" class="radio" name="progress" value="onehundred" id="onehundred">
+				<label for="onehundred" class="label">100%</label>
+
+			<div class="progress">
+				<div class="progress-bar"></div>
+			</div>
+  
+			<!-- <input type="button" name="next" id="next" value="Next">
+			<input type="button" name="back" id="back" value="Back"> -->
+  
 			</div>
 			
         </section>
