Set fields as required

--- a/form.html
+++ b/form.html
@@ -133,7 +133,7 @@
                                 <label for="name">Name</label>
                             </div>
                             <div class="col span-2-of-3">
-                                <input type="text" id="name" placeholder="Your name">
+                                <input type="text" id="name" placeholder="Your name" required>
                             </div>  
                         </div>
                         <div class="row">
@@ -141,7 +141,7 @@
                                 <label for="email">Email</label>
                             </div>
                             <div class="col span-2-of-3">
-                                <input type="email" id="email" placeholder="Your email">
+                                <input type="email" id="email" placeholder="Your email" required>
                             </div>  
                         </div>
                         <div class="row">
