bugs-fix-master

--- a/form.html
+++ b/form.html
@@ -201,7 +201,6 @@
                                 What software do you need?
                             </h3>
                             <select class="softwares1">
-                                <option value="mac">Mac OS</option>
                                 <option value="wind10" id="win10-1">Windows 10</option>
                                 <option value="wind7" id="win7-1">Windoes 7: Ultimate</option>
                                 <option value="ubuntu">Ubuntu</option>
@@ -209,10 +208,10 @@
                                 <option value="photoshop">Adobe Photoshop</option>
                                 <option value="illustrator">Adobe Illustrator</option>
                                 <option value="adobePremirePro">Adobe Premire Pro</option>
+								<option value="mac">Mac OS</option>
                                 <option value="other">Other</option>
                             </select>
                             <select class="softwares2">
-                                <option value="mac">Mac OS</option>
                                 <option value="wind10" id="win10-2">Windows 10</option>
                                 <option value="wind7" id="win7-2">Windoes 7: Ultimate</option>
                                 <option value="ubuntu">Ubuntu</option>
@@ -220,10 +219,10 @@
                                 <option value="photoshop">Adobe Photoshop</option>
                                 <option value="illustrator">Adobe Illustrator</option>
                                 <option value="adobePremirePro">Adobe Premire Pro</option>
+								<option value="mac">Mac OS</option>
                                 <option value="other">Other</option>
                             </select>
                             <select class="softwares3">
-                                <option value="mac">Mac OS</option>
                                 <option value="wind10" id="win10-3">Windows 10</option>
                                 <option value="wind7" id="win7-3">Windoes 7: Ultimate</option>
                                 <option value="ubuntu">Ubuntu</option>
@@ -231,6 +230,7 @@
                                 <option value="photoshop">Adobe Photoshop</option>
                                 <option value="illustrator">Adobe Illustrator</option>
                                 <option value="adobePremirePro">Adobe Premire Pro</option>
+								<option value="mac">Mac OS</option>
                                 <option value="other">Other</option>
                             </select>
                         </div>
@@ -264,6 +264,7 @@
                                 <option value="DOTA 2">DOTA 2</option>
                                 <option value="lol">League of Legends</option>
                                 <option value="battlefield">Battlefield 2</option>
+								<option value="other">Other</option>
                             </select>
                             <select class="games2">
                                 <option value="singlePlayer" disabled>Single Player</option>
