--- a/facilities.html
+++ b/facilities.html
@@ -309,7 +309,7 @@
                     We're happy to hear from you
                 </h2>
                 <h3>
-                    Just shoot us a message &mdash; You won't be disappointed. We promise!
+                    Just shoot us a message &mdash; You won't be disappointed. We promise.
                 </h3>
                 <hr>
             </div>
