--- a/form.html
+++ b/form.html
@@ -191,7 +191,7 @@
                                 <label name="priorityLabel">Anything Specific?</label>
                             </div>
                             <div class="col span-2-of-3">
-                                <textarea rows="2" cols="30" id="otherPriority" class="otherPriority"></textarea>
+                                <textarea rows="2" id="otherPriority" class="otherPriority"></textarea>
                             </div>
                         </div>
                     </div>
@@ -201,7 +201,7 @@
                                 What software do you need?
                             </h3>
                             <select class="softwares1">
-                                <option value="wind10" id="win10-1">Windows 10</option>
+                                <option value="wind10" id="win10-1">Windows 10: Pro</option>
                                 <option value="wind7" id="win7-1">Windoes 7: Ultimate</option>
                                 <option value="ubuntu">Ubuntu</option>
                                 <option value="micro">Microsoft Office</option>
@@ -212,7 +212,7 @@
                                 <option value="other">Other</option>
                             </select>
                             <select class="softwares2">
-                                <option value="wind10" id="win10-2">Windows 10</option>
+                                <option value="wind10" id="win10-2">Windows 10: Pro</option>
                                 <option value="wind7" id="win7-2">Windoes 7: Ultimate</option>
                                 <option value="ubuntu">Ubuntu</option>
                                 <option value="micro">Microsoft Office</option>
@@ -223,7 +223,7 @@
                                 <option value="other">Other</option>
                             </select>
                             <select class="softwares3">
-                                <option value="wind10" id="win10-3">Windows 10</option>
+                                <option value="wind10" id="win10-3">Windows 10: Pro</option>
                                 <option value="wind7" id="win7-3">Windoes 7: Ultimate</option>
                                 <option value="ubuntu">Ubuntu</option>
                                 <option value="micro">Microsoft Office</option>
@@ -259,6 +259,7 @@
                                 <option value="multiPlayer" disabled>Multi Player</option>
                                 <option value="--2" disabled></option>
                                 <option value="fortnite">Fortnite</option>
+                                <option value="fortnite">CSGO</option>
                                 <option value="pubg">PUBG</option>
                                 <option value="rocketLeague">Rocket League</option>
                                 <option value="DOTA 2">DOTA 2</option>
@@ -278,6 +279,7 @@
                                 <option value="--1" disabled></option>
                                 <option value="multiPlayer" disabled>Multi Player</option>
                                 <option value="--2" disabled></option>
+                                <option value="fortnite">CSGO</option>
                                 <option value="fortnite">Fortnite</option>
                                 <option value="pubg">PUBG</option>
                                 <option value="rocketLeague">Rocket League</option>
@@ -298,6 +300,7 @@
                                 <option value="--1" disabled></option>
                                 <option value="multiPlayer" disabled>Multi Player</option>
                                 <option value="--2" disabled></option>
+                                <option value="fortnite">CSGO</option>
                                 <option value="fortnite">Fortnite</option>
                                 <option value="pubg">PUBG</option>
                                 <option value="rocketLeague">Rocket League</option>
