form-facilities-fixed

--- a/index.html
+++ b/index.html
@@ -296,6 +296,7 @@
                                 <option value="ad">Advertisement</option>
                                 <option value="other">Other</option>
                             </select>
+							<input type="text" id="otherFind" class="otherFind" name="otherFind">
                         </div>
                     </div>
                     <div class="row">
