--- a/facilities.html
+++ b/facilities.html
@@ -343,6 +343,7 @@
                                 <option value="ad">Advertisement</option>
                                 <option value="other">Other</option>
                             </select>
+							<input type="text" id="otherFind" class="otherFind" name="otherFind">
                         </div>
                     </div>
                     <div class="row">
