--- a/form.html
+++ b/form.html
@@ -126,7 +126,7 @@
             </div>
             <hr>
             <div class="row">
-                <form class="main-form" action="/resources/php/form.php">
+                <form class="main-form" action="/resources/php/form.php" method="POST">
                     <div id="panel1" class="p1">
                         <div class="row">
                             <div class="col span-1-of-3">
